[gd_scene load_steps=10 format=3 uid="uid://ciaj2edwf0e0c"]

[ext_resource type="Script" uid="uid://c1h0q4kcxomc8" path="res://src/entities/entity_control_ui.gd" id="1_ck4s7"]
[ext_resource type="Texture2D" uid="uid://dd6kgdsqck3w5" path="res://assets/ui/user_interface.png" id="1_vvb3o"]
[ext_resource type="FontFile" uid="uid://dnlfjy7j2gd3n" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="2_1jutp"]
[ext_resource type="Texture2D" uid="uid://en2ws0o3r862" path="res://assets/ui/user_interface_new.png" id="3_pn8ds"]

[sub_resource type="LabelSettings" id="LabelSettings_ck4s7"]
font = ExtResource("2_1jutp")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtbkc"]
atlas = ExtResource("3_pn8ds")
region = Rect2(64, 336, 260, 12)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1jutp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck4s7"]
texture = ExtResource("1_vvb3o")
region_rect = Rect2(16, 40, 96, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1jutp"]
texture = ExtResource("1_vvb3o")
region_rect = Rect2(16, 11, 96, 6)

[node name="EntityControlUI" type="Control"]
layout_mode = 3
anchor_right = 0.1
anchor_bottom = 0.0444444
script = ExtResource("1_ck4s7")
metadata/_edit_use_anchors_ = true

[node name="EnemyName" type="Label" parent="."]
modulate = Color(0.909804, 0.345098, 0.321569, 1)
texture_filter = 3
layout_mode = 1
offset_right = 80.0
offset_bottom = 39.0
scale = Vector2(0.25, 0.25)
text = "Level"
label_settings = SubResource("LabelSettings_ck4s7")

[node name="EnemyLevel" type="Label" parent="."]
modulate = Color(0.909804, 0.345098, 0.321569, 1)
texture_filter = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_right = 60.0
offset_bottom = 39.0
grow_horizontal = 0
scale = Vector2(0.25, 0.25)
text = "Level"
label_settings = SubResource("LabelSettings_ck4s7")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_top = 0.375
anchor_right = 1.0
anchor_bottom = 0.625
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_rtbkc")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ProgressBarBG" type="ProgressBar" parent="Background"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_1jutp")
theme_override_styles/fill = SubResource("StyleBoxTexture_ck4s7")
value = 60.0
show_percentage = false

[node name="ProgressBar" type="ProgressBar" parent="Background"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_1jutp")
theme_override_styles/fill = SubResource("StyleBoxTexture_1jutp")
value = 50.0
show_percentage = false
